# ethereum-package

./: .buildifier.lint.json  .editorconfig  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .typos.toml  CHANGELOG.md  CLAUDE.md  Dockerfile.buildifier  LICENSE  Makefile  README.md  _typos.toml  args.json  bal-devnet-2-pre-ams.yaml  bal-devnet-2.yaml  buildoor-prysm.yaml  custom_params.yaml  input_args.json  kurtosis.mod  kurtosis.yml  light-beaconchain-config.yaml  luban.yml  main.star  network_params.json  network_params.yaml  network_params_aura.yaml  network_params_charon_example.yaml  network_params_cl.yaml  network_params_test.yaml  pectra.yaml  prysm.yaml  release-please-config.json  rename.sh  test.yaml  types.proto
.agents/skills/: kurtosis-ethereum
.circleci/: config.yml
.circleci/tests/: besu-all.json  complex-mev.json  disable-peer-scording.json  disable-peer-scoring.json  erigon-all.json  ethereumjs-all.json  full-interop.json  geth-all.json  geth-all.yaml  lighthouse-all.json  lodestar-all.json  (+24 more)
.github/: check-consensus-spec-values.py  remove_trailing_space.py
docs/: architecture.md  changelog.md
dora-config/: dora-config.yaml
dummy_el/: Cargo.toml  Dockerfile  README.md
dummy_el/src/: main.rs
examples/: README.md  aura.yaml  capella-mev.json  capella-mev.yaml  dencun.yaml  verkle-gen-nethermind.yaml  verkle.json  verkle.yaml
package/: README.md  kurtosis.yml  mev.yaml
scripts/: build.sh  run.sh
src/: CLAUDE.md  CURSOR.mdc  node_metrics_info.star  participant.star  participant_network.star  syn_flood.star
static_files/: static_files.star
(+735 files in other folders)
