[package]
name = "dummy_el"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dummy_el"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
